Initial work on adding keywords to upload form

--- a/geonode/worldmap/templates/upload/layer_upload.html
+++ b/geonode/worldmap/templates/upload/layer_upload.html
@@ -92,6 +92,7 @@
               <form id="metadata-uploader" method="post" enctype="multipart/form-data">
               <label for="title">{% trans "Title" %}</label><input type="text" id="layer_title" label="Title" class="required"></input>
               <label for="abstract">{% trans "Abstract" %}</label><textarea rows="4" cols="50" id="abstract" label="Abstract" class="required"></textarea>
+              <label for="keywords">{% trans "Keywords" %}</label><input type="text" id="keywords" label="Title" class="required"></input>
               <label for="charset">{% trans "Encoding" %}</label>
               <select id="charset">
               {% for charset in charsets %}
