--- a/geonode/maps/templates/maps/_map_list_item.html
+++ b/geonode/maps/templates/maps/_map_list_item.html
@@ -23,7 +23,7 @@
       </div> <!-- /.meta -->
       <div class="tools">
         <p>
-          <a href="{% url "map_download" map.id %}" class="btn btn-mini">{% trans "Download" %}</a>
+          <!--<a href="{% url "map_download" map.id %}" class="btn btn-mini">{% trans "Download" %}</a>-->
           <a href="{% url "map_view" map.id %}" class="btn btn-mini">{% trans "View" %}</a>
         </p>
       </div> 
