--- a/geonode/worldmap/static/worldmap/css/base.css
+++ b/geonode/worldmap/static/worldmap/css/base.css
@@ -38,3 +38,16 @@
 .content-wrap form .form-actions {
     text-align: center;
 }
+
+.navbar .nav > li > a {
+    text-shadow: 0 0;
+}
+
+.navbar .nav li.dropdown.open > .dropdown-toggle, .navbar .nav li.dropdown.active > .dropdown-toggle, .navbar .nav li.dropdown.open.active > .dropdown-toggle {
+    color: #000000;
+}
+
+.dropdown-toggle {
+    color: #000000;
+}
+
