--- a/geonode/worldmap/templates/base.html
+++ b/geonode/worldmap/templates/base.html
@@ -5,11 +5,16 @@
     <meta charset="utf-8">
     <title>{% block title %}{{ SITE_NAME }}{% endblock %}</title>
     {% block head %}
+        {% block extra_head %}{% endblock %}
       <link href="{{ STATIC_URL }}lib/css/bootstrap.css" rel="stylesheet"/>
       {% block css-src %}
       <link href="{{ STATIC_URL }}geonode/css/base.css" rel="stylesheet" />
-      <link href="{{ STATIC_URL }}worldmap/css/base.css" rel="stylesheet" /> 
-      <link href="{{ STATIC_URL }}worldmap/css/site.css" rel="stylesheet" />      
+      <link href="{{ STATIC_URL }}worldmap/css/base.css" rel="stylesheet" />
+      <link href="{{ STATIC_URL }}worldmap/css/site.css" rel="stylesheet" />
+      {% if urlsuffix %}
+          <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}{{urlsuffix}}/site.css" media="screen" />
+          <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}{{urlsuffix}}/dropdown.css" media="screen" />
+      {% endif %}
       {% endblock %}
       <link href='{{ STATIC_URL }}geonode/font/lato_font.css' rel='stylesheet' type='text/css' />
       <link href="{{ STATIC_URL }}geonode/css/ext-compatibility.css" rel="stylesheet" />
@@ -19,7 +24,7 @@
       {% else %}
       <link href="{{ STATIC_URL }}lib/css/assets.min.css" rel="stylesheet"/>
       {% endif %}
-      {% block extra_head %}{% endblock %}
+
     {% endblock %}
     <!--[if lt IE 9]>
       <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -27,12 +32,90 @@
         {% autoescape off %}
         {{ GOOGLE_ANALYTICS_CODE }}
     {% endautoescape %}
-    
+
   </head>
   <body class="{% block body_class %}{% endblock %}">
     {% block header %}
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
+      {% if urlsuffix %}
+          <div id="header">
+              <div id="wmpower">{% trans "Powered by <a target='_blank' href='/'>WorldMap</a>"%}</div>
+
+              <div class="wrapmap selfclear">
+
+                  <div id="page-breadcrumb"><span>{{title}}</span></div>
+
+                  <div id="loginarea">
+                      <div class="nav-collapse pull-right">
+                          <div class="pull-right">
+                              <ul class="nav pull-right account-bar">
+                                  {% if user.is_authenticated %}
+                                      <li class="user-avatar">
+                                          {% avatar user 20 %}
+                                      </li>
+                                      <li class="dropdown user">
+                                          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                              {{ user.username }}
+                                              <b class="caret"></b>
+                                          </a>
+                                          <ul class="dropdown-menu">
+                                              <li><a href="{{ user.get_profile.get_absolute_url }}"><i class="icon-user"></i> {% trans "Profile" %}</a></li>
+                                              {% if user.is_staff %}
+                                                  <li><a href="{% url "admin:index" %}"><i class="icon-cog"></i> {% trans "Admin" %}</a></li>
+                                              {% endif %}
+                                              {% if user.is_superuser %}
+                                                  <li><a href="{{ GEOSERVER_BASE_URL }}"><i class="icon-globe"></i> {% trans "GeoServer" %}</a></li>
+                                              {% endif %}
+                                              <li class="divider"></li>
+                                              <li><a href="{% url "account_logout" %}"><i class="icon-off"></i> {% trans "Log out" %}</a></li>
+                                          </ul>
+                                      </li>
+                                      <li class="divider-v">|</li>
+                                      <li class="actions">
+                                          <!--a href="#" rel="tooltip" title="{% trans 'Notifications' %}"><i class="icon-bullhorn"></i></a>
+                        <a href="#" rel="tooltip" title="{% trans 'Messages' %}"><i class="icon-envelope"></i></a-->
+                                          <a href="{% url "data_upload" %}" rel="tooltip" title="{% trans 'Upload' %}"><i class="icon-upload-alt"></i></a>
+                                          <a href="{{ STATIC_URL }}worldmap/docs/WorldMap_Help.pdf" rel="tooltip" title="{% trans 'Help' %}"><i class="icon-question-sign"></i></a>
+                                      </li>
+                                  {% else %}
+                                      <li class="dropdown">
+                                          <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Sign in" %}</a>
+                                          <ul class="dropdown-menu">
+                                              <li>
+                                                  <form action="{% url "account_login" %}?next={% if 'logout' not in request.path %}{{request.get_full_path}}{% else %}/{% endif %}" method="post" class="sign-in">
+                                                      {% csrf_token %}
+                                                      <label for="id_username">{% trans "Username" %}:</label>
+                                                      <input id="id_username" name="username" type="text" />
+                                                      <label for="id_password">{% trans "Password" %}:</label>
+                                                      <input id="id_password" name="password" type="password" />
+                                                      <label class="checkbox">
+                                                          <input type="checkbox" />
+                                                          {% trans "Remember Me" %}
+                                                      </label>
+                                                      <button type="submit" class="btn pull-right">{% trans "Sign in" %}</button>
+                                                  </form>
+                                              </li>
+                                          </ul>
+                                      </li>
+                                      {% if REGISTRATION_OPEN %}
+                                          <li class="navbar-text">{% trans "or" %}</li>
+                                          <li><a href="{% url "account_signup" %}">{% trans "Register" %}</a></li>
+                                      {% endif %}
+                                      <li class="divider-v">|</li>
+                                      <li class="actions">
+                                          <a href="{% url "help" %}" rel="tooltip" title="help"><i class="icon-question-sign"></i></a>
+                                      </li>
+                                  {% endif %}
+                              </ul>
+                          </div>
+
+                      </div>
+                  </div><!-- /.wrap -->
+              </div><!-- /#header -->
+          </div>
+      {%  else %}
+
         <div class="container">
           <div class="row">
             <div class="span3">
@@ -79,7 +162,7 @@
                           <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Sign in" %}</a>
                           <ul class="dropdown-menu">
                             <li>
-                                <form action="{% url "account_login" %}" method="post" class="sign-in">
+                                <form action="{% url "account_login" %}?next={% if 'logout' not in request.path %}{{request.get_full_path}}{% else %}/{% endif %}" method="post" class="sign-in">
                                     {% csrf_token %}
                                     <label for="id_username">{% trans "Username" %}:</label>
                                     <input id="id_username" name="username" type="text" />
@@ -125,7 +208,7 @@
                   <li id="nav_maps">
                     <a href="{% url "maps_browse" %}">{% trans "Maps" %}</a>
                   </li>
-    
+
                   {% if DOCUMENTS_APP %}
                   <li id="nav_documents">
                     <a href="{% url "documents_browse" %}">{% trans "Documents" %}</a>
@@ -149,6 +232,7 @@
               </ul>
             </div>
           </div>
+            {%  endif %}
         </div>
        </section>
       </div>
