--- a/geonode/worldmap/templates/geonode/sdk_header.html
+++ b/geonode/worldmap/templates/geonode/sdk_header.html
@@ -18,12 +18,15 @@
     <script src="http://www.google.com/jsapi?key={{GOOGLE_API_KEY}}"></script>
 {% endif %}
 
-<script type="text/javascript" src="http://localhost:9080/lib/app.js"></script>
+<!--script type="text/javascript" src="http://localhost:9080/lib/app.js"></script-->
+<script type="text/javascript" src="{{ STATIC_URL }}sdk/lib/app.js"></script>
 <!-- 
 
-ant -f ../opengeosuite-3.0.1-sdk/build.xml -Dapp.path=../geonode-suite-sdk -Dsdk.build=../geonode-suite-sdk/build -Dapp.name=geonode-suite-sdk debug
+ant -f ../opengeosuite-3.0.1-sdk/build.xml -Dapp.path=../geonode-suite-sdk -Dsdk.build=../gn20upgrade/geonode/static -Dapp.name=sdk debug
+ant -f ../opengeosuite-3.0.1-sdk/build.xml -Dapp.path=../geonode-suite-sdk -Dsdk.build=../gn20upgrade/geonode/static -Dapp.name=sdk build
 
  -->
+
 <script type="text/javascript">
 OpenLayers.ImgPath = "{{ STATIC_URL }}geoexplorer/externals/openlayers/theme/default/img";
 OpenLayers.Request.DEFAULT_CONFIG.headers = {
