--- a/src/GeoNodePy/geonode/contrib/services/templates/services/layers_register.html
+++ b/src/GeoNodePy/geonode/contrib/services/templates/services/layers_register.html
@@ -16,15 +16,29 @@
 {% block main %}
 <div class="twocol">
     {% if service %}
+    <h1>Select Layers to Import</h1>
      <form method="POST">
       {% csrf_token %}
-      <ul class="form">
-          <input type="hidden" id="service_id" value="{{service.id}}">
-          <li><input type="checkbox" checked="true" id="checkall" />{% trans "Select All/None" %}</li>
-        {% for layer in service.servicelayer_set.all %}
-          <li><input type="checkbox" name="layer_list" id="option_{{layer.typename}}" value="{{ layer.typename }}" checked="false"  />{{ layer.typename }}</li>
-        {% endfor %}
-      </ul>
+
+         <table class="table table-striped table-bordered table-condensed">
+             <thead>
+             <tr>
+                 <th><input type="checkbox" checked="true" id="checkall" />{% trans "All/None" %}</th>
+                 <th>{% trans "Name" %}</th>
+                 <th>{% trans "Description" %}</th>
+             </tr>
+             </thead>
+             <tbody>
+             {% for layer in service.servicelayer_set.all %}
+             <tr>
+                 <td><input type="checkbox" name="layer_list" id="option_{{layer.typename}}" value="{{ layer.typename }}" checked="false"  /></td>
+                 <td>{{ layer.typename }}</td>
+                 <td>{{ layer.description }}</td>
+             </tr>
+             {% endfor %}
+
+             </tbody>
+         </table>
          <div align="center"><p><input type="submit" class="submit_btn" value="{% trans "Add Layers" %}" /></p></div>
      </form>
     {% else %}
