--- a/src/GeoNodePy/geonode/contrib/services/templates/services/service_list.html
+++ b/src/GeoNodePy/geonode/contrib/services/templates/services/service_list.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "page_layout.html" %}
 {% load i18n %}
 
 {% block title %} Services -- {{ block.super }} {% endblock %}
@@ -6,11 +6,18 @@
 {% block main %}
 <div class="twocol">
 {% if services %}
-<ul>
+<table>
+    <tr>
+        <th>Title</th><th>URL</th>
+    </tr>
+
 {% for service in services %}
-<li><a href='{% url "service_detail" service.id %}'>{{ service.name }}</a></li>
+<tr>
+<td><a href='{% url service_detail service.id %}'>{{ service.title }}</a></td>
+<td><a href='{% url service_detail service.id %}'>{{ service.base_url }}</a></td>
+</tr>
 {% endfor %}
-</ul>
+</table>
 {% else %}
 <h3>No services registered</h3>
 {% endif %}
