--- a/src/GeoNodePy/geonode/contrib/services/templates/services/service_remove.html
+++ b/src/GeoNodePy/geonode/contrib/services/templates/services/service_remove.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "page_layout.html" %}
 {% load i18n %}
 
 {% block title %} {{ service.name }} - {{ block.super }} {% endblock %}
@@ -6,11 +6,16 @@
 {% block main %}
 <h3>{% trans "Are you sure you want to remove"  %} <strong>{{ service.name }}</strong>?</h3>
 
-<form action="/services/{{service.id}}/remove" method="POST">
-    {% csrf_token %}
-    <input type="submit" value="{% trans "Yes, I am sure"  %}" />
-</form>
-<form action="/services/{{service.id}}" method="GET">
-    <button type="submit">{% trans "No, don't remove it" %}</button>
-</form>
+<div style="float:left;">
+    <form action="/services/{{service.id}}/remove" method="POST" class="inline">
+        {% csrf_token %}
+        <input type="hidden" value="{{next}}" id="next" name="next">
+        <input type="submit" class="submit_btn" value="{% trans "Yes, delete"  %}" />
+    </form>
+    <form action="/services/{{service.id}}" method="GET" class="inline">
+        <button type="submit"  class="cancel_btn" onclick="javascript: history.go(-1);return false;">{% trans "No, cancel" %}</button>
+    </form>
+</div>
+<div style="float:left;">
+
 {% endblock %}
