--- a/geonode/worldmap/templates/geonode/sdk_header.html
+++ b/geonode/worldmap/templates/geonode/sdk_header.html
@@ -18,8 +18,8 @@
     <script src="http://www.google.com/jsapi?key={{GOOGLE_API_KEY}}"></script>
 {% endif %}
 
-<!--script type="text/javascript" src="http://localhost:9080/lib/app.js"></script-->
-<script type="text/javascript" src="{{ STATIC_URL }}sdk/lib/app.js"></script>
+<script type="text/javascript" src="http://localhost:9080/lib/app.js"></script>
+<!--script type="text/javascript" src="{{ STATIC_URL }}sdk/lib/app.js"></script-->
 <!-- 
 
 ant -f ../opengeosuite-3.0.1-sdk/build.xml -Dapp.path=../geonode-suite-sdk -Dsdk.build=../gn20upgrade/geonode/static -Dapp.name=sdk debug
