--- a/geonode/templates/account/login.html
+++ b/geonode/templates/account/login.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% block title %} {% trans "WorldMap Login" %} - {{ block.super }} {% endblock %}
   {% block breadcrumb %}
-      					<a id="logo" href="{% url home %}"><img src="{{STATIC_URL}}theme/img/WorldMap-Logo_26px.png" border="0"></a>
+      					<a id="logo" href="{% url "home" %}"><img src="{{STATIC_URL}}theme/img/WorldMap-Logo_26px.png" border="0"></a>
   						<div id="page-breadcrumb"><span>{% trans "Sign In" %}</span></div>
   {% endblock %}
 {% block main %}
@@ -13,16 +13,16 @@
   <p>{% trans "Your username and password didn't match. Please try again." %}</p>
   {% endif %}
 
-  <p>{% trans "Don't have an account yet?" %} <a href="{% url registration_register %}">{% trans "Register" %}</a></p>
-    <form method="post" action="{% url auth_login %}">
+  <p>{% trans "Don't have an account yet?" %} <a href="{% url "account_signup" %}">{% trans "Register" %}</a></p>
+    <form method="post" action="{% url "account_login" %}">
 
     {% csrf_token %}
 	<ul class="form">
 		  {{ form.as_ul }}
 		<li><input type="hidden" name="next" value="{{next}}" /></li>
 	    <li><input type="submit" value="{%trans 'Login' %}"/></li>
-        <li><a href="{% url django.contrib.auth.views.password_reset %}">{% trans "Forgot password" %}? </a></li>
-        <li></li><a href="{% url geonode.register.views.forgotUsername %}">{% trans "Forgot username" %}? </a></li>
+        <li><a href="{% url "account_password_reset" %}">{% trans "Forgot password" %}? </a></li>
+        <li></li><a href="{% url "forgot_username" %}">{% trans "Forgot username" %}? </a></li>
 	</ul>
   </form>
 
