--- a/geonode/templates/page_layout.html
+++ b/geonode/templates/page_layout.html
@@ -23,9 +23,9 @@
     	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}theme/site.css"  media="screen" />
     	  <!--[if lte IE 6]><link rel="stylesheet" href="{{ STATIC_URL }}theme/boilerplate-ie-min.css" type="text/css" media="screen" charset="utf-8"><![endif]-->
     {% endif %}
-    <script type="text/javascript" src="{% url jscat %}"></script>
-    <script type="text/javascript" src="{% url django.views.i18n.javascript_catalog %}"></script>
-    <script type="text/javascript" src="{% url lang %}"></script>
+    <script type="text/javascript" src="{% url "jscat" %}"></script>
+    <script type="text/javascript" src="{% url "django.views.i18n.javascript_catalog" %}"></script>
+    <script type="text/javascript" src="{% url "lang" %}"></script>
    
     
   	{% endblock %}
@@ -68,27 +68,27 @@
         	    {% block breadcrumb %}
         	    	{% if urlsuffix %}
                                 {% if map.officialurl %}
-                                                 <div id="page-breadcrumb"><a href="{% url geonode.maps.views.official_site map.officialurl %}">{{title}}</a></div>
+                                                 <div id="page-breadcrumb"><a href="{% url "geonode.maps.views.official_site map.officialurl" %}">{{title}}</a></div>
                                 {% else %}
                                                 <div id="page-breadcrumb"><span>{{title}}</span></div>
                                 {% endif %}
 
     				{% else %}
-      					<a id="logo" href="{% url home %}"><img src="{{STATIC_URL}}theme/img/WorldMap-Logo_26px.png" border="0"></a>
+      					<a id="logo" href="{% url "home" %}"><img src="{{STATIC_URL}}theme/img/WorldMap-Logo_26px.png" border="0"></a>
   						<div id="page-breadcrumb"><span>{{title}}</span></div>
       				{% endif %}
   	  			{% endblock %}
         	{% endblock logos %}
       <div id="login-area">
         {% if user.is_authenticated %}
-          <a href="{% if user.get_profile %}{{ user.get_profile.get_absolute_url }}{% else %}{% url profiles_create_profile %}{% endif %}">{{ user.username}}</a> | <a href="{% url auth_logout %}">{% trans "Log out" %}</a>
+          <a href="{% if user.get_profile %}{{ user.get_profile.get_absolute_url }}{% else %}{% url "profiles_create_profile" %}{% endif %}">{{ user.username}}</a> | <a href="{% url "account_logout" %}">{% trans "Log out" %}</a>
         {% else %}
           <!-- this should be updated to a url var -->
           <a href="/accounts/login?next={% if 'logout' not in request.path %}{{request.path}}{% else %}/{% endif %}"
           >{% trans "Sign in" %}</a>
       {% endif %}
           | <a class="" id="mapLink" href="/maps/new">{% trans "Create Map" %}</a>
-          | <a class="" id="viewLink" href="{% url maps_search %}?sort=last_modified&dir=DESC">{% trans "View Map" %}</a>
+          | <a class="" id="viewLink" href="{% url "maps_search" %}?sort=last_modified&dir=DESC">{% trans "View Map" %}</a>
           | <a class="" id="helpLink" href="{{ STATIC_URL }}docs/WorldMap_Help_{{LANGUAGE_CODE}}.pdf" target="_blank">{% trans "Help" %}</a>
       </div>
     </div><!-- /.wrap -->
