--- a/geonode/templates/page_layout.html
+++ b/geonode/templates/page_layout.html
@@ -26,8 +26,8 @@
     <script type="text/javascript" src="{% url jscat %}"></script>
     <script type="text/javascript" src="{% url django.views.i18n.javascript_catalog %}"></script>
     <script type="text/javascript" src="{% url lang %}"></script>
-   
-    
+
+
   	{% endblock %}
     {% autoescape off %}
         {{ GOOGLE_ANALYTICS_CODE }}
@@ -62,77 +62,86 @@
 </head>
 <body>
 {% block start_body_js %}{% endblock %}
-  <div id="header">
-    <div class="wrap selfclear">
-        	{% block logos %}
-        	    {% block breadcrumb %}
-        	    	{% if urlsuffix %}
-                                {% if map.officialurl %}
-                                                 <div id="page-breadcrumb"><a href="{% url geonode.maps.views.official_site map.officialurl %}">{{title}}</a></div>
-                                {% else %}
-                                                <div id="page-breadcrumb"><span>{{title}}</span></div>
-                                {% endif %}
 
-    				{% else %}
-      					<a id="logo" href="{% url home %}"><img src="{{STATIC_URL}}theme/img/WorldMap-Logo_26px.png" border="0"></a>
-  						<div id="page-breadcrumb"><span>{{title}}</span></div>
-      				{% endif %}
-  	  			{% endblock %}
-        	{% endblock logos %}
-      <div id="login-area">
-        {% if user.is_authenticated %}
-          <a href="{% if user.get_profile %}{{ user.get_profile.get_absolute_url }}{% else %}{% url profiles_create_profile %}{% endif %}">{{ user.username}}</a> | <a href="{% url auth_logout %}">{% trans "Log out" %}</a>
-        {% else %}
-          <!-- this should be updated to a url var -->
-          <a href="/accounts/login?next={% if 'logout' not in request.path %}{{request.path}}{% else %}/{% endif %}"
-          >{% trans "Sign in" %}</a>
-      {% endif %}
-          | <a class="" id="mapLink" href="/maps/new">{% trans "Create Map" %}</a>
-          | <a class="" id="viewLink" href="{% url maps_search %}?sort=last_modified&dir=DESC">{% trans "View Map" %}</a>
-          | <a class="" id="helpLink" href="{{ STATIC_URL }}docs/WorldMap_Help_{{LANGUAGE_CODE}}.pdf" target="_blank">{% trans "Help" %}</a>
-      </div>
-    </div><!-- /.wrap -->
-  </div><!-- /#header -->
 
-  <div id="main">
+<div id="wrap">
+
+    <div id="header">
+        <div class="wrap selfclear">
+            {% block logos %}
+                {% block breadcrumb %}
+                    {% if urlsuffix %}
+                        {% if map.officialurl %}
+                            <div id="page-breadcrumb"><a href="{% url geonode.maps.views.official_site map.officialurl %}">{{title}}</a></div>
+                        {% else %}
+                            <div id="page-breadcrumb"><span>{{title}}</span></div>
+                        {% endif %}
+
+                    {% else %}
+                        <a id="logo" href="{% url home %}"><img src="{{STATIC_URL}}theme/img/WorldMap-Logo_26px.png" border="0"></a>
+                        <div id="page-breadcrumb"><span>{{title}}</span></div>
+                    {% endif %}
+                {% endblock %}
+            {% endblock logos %}
+            <div id="login-area">
+                {% if user.is_authenticated %}
+                    <a href="{% if user.get_profile %}{{ user.get_profile.get_absolute_url }}{% else %}{% url profiles_create_profile %}{% endif %}">{{ user.username}}</a> | <a href="{% url auth_logout %}">{% trans "Log out" %}</a>
+                {% else %}
+                    <!-- this should be updated to a url var -->
+                    <a href="/accounts/login?next={% if 'logout' not in request.path %}{{request.path}}{% else %}/{% endif %}"
+                            >{% trans "Sign in" %}</a>
+                {% endif %}
+                | <a class="" id="mapLink" href="/maps/new">{% trans "Create Map" %}</a>
+                | <a class="" id="viewLink" href="{% url maps_search %}?sort=last_modified&dir=DESC">{% trans "View Map" %}</a>
+                | <a class="" id="helpLink" href="{{ STATIC_URL }}docs/WorldMap_Help_{{LANGUAGE_CODE}}.pdf" target="_blank">{% trans "Help" %}</a>
+            </div>
+        </div><!-- /.wrap -->
+    </div><!-- /#header -->
+
+    <div id="main">
+        <div class="wrap selfclear">
+            {% block main %}{% endblock %}
+            {% block content %}{% endblock %}
+            {% block sidebar %}{% endblock %}
+        </div><!-- /.wrap -->
+    </div><!-- /#main -->
+    <div id="push"></div>
+</div>
+
+<div id="footer">
     <div class="wrap selfclear">
-      {% block main %}{% endblock %}
-      {% block content %}{% endblock %}
-      {% block sidebar %}{% endblock %}
+        {% block footer %}
+
+            <!-- Only show the language form if the csrf_token is present -->
+            {% if csrf_token != "NOTPROVIDED" and False %}
+                {% get_current_language as LANGUAGE %}
+                <form class="langbar" id="target" action="/i18n/setlang/" method="post">
+                    {% csrf_token %}
+                    <div style="display: inline;float:left;">
+                        <select id="langval" name="language" onchange="javascript:form.submit()">
+                            {% for lang in LANGUAGES %}
+                                <option value="{{ lang.0 }}"
+                                        {% ifequal LANGUAGE_CODE lang.0 %} selected="selected"{% endifequal %}>
+                                    {{ lang.1 }}
+                                </option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </form>
+            {% endif %}
+
+            <div class="onecol" style="text-align:center">
+                <a href="{{site}}{{ STATIC_URL }}docs/WorldMap_Help_{{LANGUAGE_CODE}}.pdf">{% trans "Need Help?" %}</a>&nbsp;&nbsp;
+                <a href="mailto:worldmap@harvard.edu">{%  trans "Contact Us" %}</a>&nbsp;&nbsp;
+                <a href="http://projects.iq.harvard.edu/worldmap/blog">{% trans "Blog" %}</a>&nbsp;&nbsp;
+                <a href="https://github.com/cga-harvard/cga-worldmap">{% trans "Source Code" %}</a>&nbsp;&nbsp;
+                {% trans "Copyright 2011 &copy; The President and Fellows of Harvard College" %}
+            </div>
+        {% endblock %}
     </div><!-- /.wrap -->
-  </div><!-- /#main -->
-  <div id="footer">
-    <div class="wrap selfclear">
-      {% block footer %}
-      
-   <!-- Only show the language form if the csrf_token is present -->
-   {% if csrf_token != "NOTPROVIDED" and False %}       
-   {% get_current_language as LANGUAGE %}
-    <form class="langbar" id="target" action="/i18n/setlang/" method="post">
-      {% csrf_token %}
-       <div style="display: inline;float:left;">
-         <select id="langval" name="language" onchange="javascript:form.submit()">
-           {% for lang in LANGUAGES %}
-            <option value="{{ lang.0 }}"
-                {% ifequal LANGUAGE_CODE lang.0 %} selected="selected"{% endifequal %}>
-                {{ lang.1 }}
-            </option>
-           {% endfor %}
-         </select>
-       </div>
-     </form>
-   {% endif %}        
-      
-      <div class="onecol" style="text-align:center">
-         <a href="{{site}}{{ STATIC_URL }}docs/WorldMap_Help_{{LANGUAGE_CODE}}.pdf">{% trans "Need Help?" %}</a>&nbsp;&nbsp;
-         <a href="mailto:worldmap@harvard.edu">{%  trans "Contact Us" %}</a>&nbsp;&nbsp;
-          <a href="http://projects.iq.harvard.edu/worldmap/blog">{% trans "Blog" %}</a>&nbsp;&nbsp;
-         <a href="https://github.com/cga-harvard/cga-worldmap">{% trans "Source Code" %}</a>&nbsp;&nbsp;
-         {% trans "Copyright 2011 &copy; The President and Fellows of Harvard College" %}
-      </div>
-      {% endblock %}
-    </div><!-- /.wrap -->
-  </div><!-- /#footer -->
+</div><!-- /#footer -->
+
+
   {% block end_body_js %}{% endblock %}
   <div id="modalhelp" class="modal_help"></div>
 </body>
