Update gxp.plugins.LayerShare to work with remote layers Add some documentation to services.views and reorganize code a bit Tweak style/page layout

--- a/geonode/templates/page_layout.html
+++ b/geonode/templates/page_layout.html
@@ -130,7 +130,7 @@
                 </form>
             {% endif %}
 
-            <div class="onecol" style="text-align:center">
+            <div class="onecolft" style="text-align:center">
                 <a href="{{site}}{{ STATIC_URL }}docs/WorldMap_Help_{{LANGUAGE_CODE}}.pdf">{% trans "Need Help?" %}</a>&nbsp;&nbsp;
                 <a href="mailto:worldmap@harvard.edu">{%  trans "Contact Us" %}</a>&nbsp;&nbsp;
                 <a href="http://projects.iq.harvard.edu/worldmap/blog">{% trans "Blog" %}</a>&nbsp;&nbsp;
