--- a/geonode/static/theme/site.css
+++ b/geonode/static/theme/site.css
@@ -450,17 +450,17 @@ Columns
     position: relative;
     margin-top: -4em; /* negative value of footer height */
     height: 4em;
-    clear:both;
+
 }
 
-#footer .onecol {
+#footer .onecolft {
     width: 920px;
     margin: 0 10px;
     padding: 10px 20px;
     background: #f1f6f7;
 }
 
-#footer .twocol {
+#footer .twocolft {
     width: 600px;
     margin: 0 10px;
     padding: 10px 20px;
@@ -468,7 +468,7 @@ Columns
     background: #f1f6f7;
 }
 
-#footer .threecol {
+#footer .threecolft {
     width: 260px;
     margin: 0 10px;
     padding: 10px 20px;
