--- a/geonode/contrib/services/templates/services/service_detail.html
+++ b/geonode/contrib/services/templates/services/service_detail.html
@@ -45,19 +45,19 @@ Ext.onReady(function() {
   <p><strong>{% trans "Name:" %}</strong> {{service.name}}</p>
   <p><strong>{% trans "URL:" %}</strong> {{service.base_url}}</p>
   <p><strong>{% trans "Abstract:" %}</strong> {{service.abstract}}</p>
-  <p><strong>{% trans "Contact:" %}</strong> <a href="{{ service.owner.get_profile.get_absolute_url }}">{{ service.owner }}</a></a></p>
+  <p><strong>{% trans "Contact:" %}</strong> <a href="{{ service.owner.get_profile.get_absolute_url }}">{{ service.owner }}</a></p>
     {% autoescape off %}
     <h3>{% trans "Layers" %}</h3>
     <p>{% trans "This Service contains the following layers" %} </p>
     <table>
         <tr><th style="width:50%">Title</th><th>Description</th></tr>
         {% for layer in layers %}
-        {% if not layer.group == "background" %}
-        <tr>
-            <td><a href='{{ layer.get_absolute_url }}'>{{layer.title}}</a></td>
-            <td>{{layer.abstract}}</td>
-        </tr>
-        {% endif %}
+            {% if not layer.group == "background" %}
+            <tr>
+                <td><a href='{{ layer.get_absolute_url }}'>{{layer.title}}</a></td>
+                <td>{{layer.abstract}}</td>
+            </tr>
+            {% endif %}
         {% endfor %}
     </table>
     {% endautoescape %}
@@ -80,11 +80,6 @@ Ext.onReady(function() {
             <li><a href="{% url remove_service service.id %}">{% trans "Remove Service" %}</a></li>
         {% endif %}
         </ul>
-        {% if can_change_permissions %}
-            <h3>{% trans "Permissions" %}</h3>
-            <p>{% trans "Select what kind of privileges to allow for this service." %}</p>
-            <div id="permissions_form"></div>
-        {% endif %}
     {% endif %}
 </div>
 {% endblock %}
