--- a/geonode/templates/maps/layer_describe.html
+++ b/geonode/templates/maps/layer_describe.html
@@ -67,7 +67,7 @@
     			mapCrumb = "<a href=\"/maps/{{lastmap}}/\">{{lastmapTitle}}</a><span>&nbsp;/&nbsp;</span>";
     		}
 
-        var titleTemplate = new Ext.Template(mapCrumb + "<a  href=\"/data/{{layer.typename}}\">{{layer.title|default:layer.typename}}</a><span>&nbsp;/&nbsp;Edit</span>");
+        var titleTemplate = new Ext.Template(mapCrumb + "<a  href=\"/data/{{layer.service_typename}}\">{{layer.title|default:layer.service_typename}}</a><span>&nbsp;/&nbsp;Edit</span>");
 		Ext.DomHelper.overwrite(Ext.get("page-breadcrumb"), titleTemplate.apply());
         showGazetteerOptions(Ext.get("gazetteer_include").dom);
 
@@ -78,13 +78,12 @@
 {% endblock %}
 {% block main %}
 <div class="twocol">
-    <h2> {% trans "Editing details for " %} {{ layer.typename }} </h2>
+    <h2> {% trans "Editing details for " %} {{ layer.service_typename }} </h2>
 
-    {% if layer.local %}
-    <form action="{% url data_metadata  layer.typename %}" method="POST">
-    {% else %}
-    <form action="{% url data_metadata layer.typename layer.service %}" method="POST">
-    {% endif %}
+
+
+    <form action="{% url data_metadata layer.service_typename %}" method="POST">
+
 
 
         {% csrf_token %}
